src/test/deca/syntax/valid/class/classes_without_method.deca
/// Description:
// 	  Test of the syntax for empty classes (without methods) and with legacy
// Resultats:
// 	  
// Historique:
// 	  cree le 12/01/2023
class X { }
class Y extends X { }
class Z extends X { }