src/test/deca/syntax/invalid/class/missing_semi_in_asm_body.deca
/// Description:
// 	  Test syntax with a method with an asm body with a missing semi colon
// 	
// Resultats:
// 	  Syntax error
//    line 13
// Historique:
// 	  cree le 18/01/2023

class A {
    A Hello()
        asm("Hello")
}